<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/selectableItemBackground">

    <ImageButton
        android:id="@+id/backbutton"
        android:layout_width="67dp"
        android:layout_height="64dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:background="?android:attr/selectableItemBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/EditParameters"
        android:textColor="@color/primary"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/simpleEditWeight"
        android:layout_width="360dp"
        android:layout_height="75dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="30dp"
        android:autofillHints=""
        android:background="@color/primary"
        android:hint="@string/EditWeight"
        android:inputType="number"
        android:padding="15dp"
        android:textColorHint="@color/card_background"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/simpleEditHeight"
        android:layout_width="360dp"
        android:layout_height="75dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="30dp"
        android:autofillHints=""
        android:background="@color/primary"
        android:hint="@string/EditHeight"
        android:inputType="number"
        android:padding="15dp"
        android:textColorHint="@color/card_background"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/simpleEditAge"
        android:layout_width="360dp"
        android:layout_height="75dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="450dp"
        android:layout_marginEnd="30dp"
        android:autofillHints=""
        android:background="@color/primary"
        android:hint="@string/EditAge"
        android:inputType="number"
        android:padding="15dp"
        android:textColorHint="@color/card_background"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.722"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Save"
        android:layout_width="91dp"
        android:layout_height="51dp"
        android:layout_marginStart="292dp"
        android:layout_marginTop="600dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:hint="@string/SaveParameters"
        android:textColorHint="@color/card_background"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>